added Driving Dirty Octopress

--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -59,7 +59,7 @@ body > header h1:before {
     width:110px;
     overflow:hidden;
     text-align:right;
-    background-image:url('/images/shritam.png');
+    background-image:url('http://s12.postimg.org/buekjaf89/shritam.png');
     background-repeat:no-repeat;
     @media only screen and (min-width: 432px) {
             top:.32em;
