--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,24 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+#content table:not(.highlight table) {
+  border: 1px solid #e7e3e7;
+  margin-bottom: 1.5em; // to match p style
+  th, td {
+    border: 1px dashed #e7e3e7;
+    padding: 0 5px;
+  }
+  th {
+    border-style: solid;
+    font-weight: bold;
+    background: url("/images/noise.png") repeat scroll left top #f7f3f7;
+  }
+  th[align="left"], td[align="left"] {
+    text-align: left;
+  }
+  th[align="right"], td[align="right"] {
+    text-align: right;
+  }
+  th[align="center"], td[align="center"] {
+    text-align: center;
+  }
+}
