--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -26,6 +26,12 @@ body > footer {
 	@include shadow-box(none,0 15px 15px #333,0.3);
   margin-bottom: 10px;
 }
+
+article {
+  ol, ul {
+    padding-left: 3em;
+  }
+}
 .about {
 	font-style: italic;
 	background-color: #FFF;
